<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <EditText
        android:id="@+id/edit_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/imsdk_sample_edit_hint_nickname"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/edit_department"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/edit_department"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:entries="@array/imsdk_sample_department_list"
        android:prompt="@string/imsdk_sample_edit_hint_department"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toTopOf="@id/edit_workplace"
        app:layout_constraintTop_toBottomOf="@id/edit_nickname"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/edit_workplace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:entries="@array/imsdk_sample_workplace_list"
        android:prompt="@string/imsdk_sample_edit_hint_workplace"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toTopOf="@id/edit_gender"
        app:layout_constraintTop_toBottomOf="@id/edit_department"
        app:layout_constraintVertical_chainStyle="packed" />

    <RadioGroup
        android:id="@+id/edit_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/edit_invitation_code"
        app:layout_constraintTop_toBottomOf="@id/edit_workplace"
        app:layout_constraintVertical_chainStyle="packed">

        <RadioButton
            android:id="@+id/edit_gender_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imsdk_sample_gender_male" />

        <RadioButton
            android:id="@+id/edit_gender_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imsdk_sample_gender_female" />
    </RadioGroup>

    <EditText
        android:id="@+id/edit_invitation_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/imsdk_sample_edit_hint_invitation_code"
        android:imeOptions="actionGo"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/submit"
        app:layout_constraintTop_toBottomOf="@id/edit_gender"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/imsdk_uikit_button_background_selector"
        android:includeFontPadding="false"
        android:text="@string/imsdk_sample_sign_up_next"
        android:textColor="@color/imsdk_sample_button_text_selector"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/bottom_system_insets"
        app:layout_constraintTop_toBottomOf="@id/edit_invitation_code" />

    <io.github.idonans.systeminsets.SystemInsetsFrameLayout
        android:id="@+id/bottom_system_insets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submit"
        app:systemInsetPaddingBottom="all"
        app:systemInsetPaddingBottomNotConsume="true" />
</androidx.constraintlayout.widget.ConstraintLayout>