<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/imsdk_sample_edit_hint_phone"
        android:imeOptions="actionGo"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="phone"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/settings_switch"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/settings_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/imsdk_sample_switch_setting"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/reset_server"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text" />

    <Button
        android:id="@+id/open_app_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/imsdk_sample_open_app_setting"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@id/settings_switch"
        app:layout_constraintStart_toEndOf="@id/settings_switch" />

    <Button
        android:id="@+id/reset_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/imsdk_sample_switch_internet_server_default"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/api_server"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_switch"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/api_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/imsdk_sample_edit_hint_api_server"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/submit"
        app:layout_constraintTop_toBottomOf="@id/reset_server"
        tools:visibility="visible" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/imsdk_sample_button_background_selector"
        android:includeFontPadding="false"
        android:text="@string/imsdk_sample_sign_in_submit_text"
        android:textColor="@color/imsdk_sample_button_text_selector"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/bottom_system_insets"
        app:layout_constraintTop_toBottomOf="@id/api_server" />

    <io.github.idonans.systeminsets.SystemInsetsFrameLayout
        android:id="@+id/bottom_system_insets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submit"
        app:systemInsetPaddingBottom="all"
        app:systemInsetPaddingBottomNotConsume="true" />
</androidx.constraintlayout.widget.ConstraintLayout>